--- a/mailize/src/styles/globals.css
+++ b/mailize/src/styles/globals.css
@@ -2,10 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 ::-webkit-scrollbar {
